example/views/errors/404.mustache
<h1>Page Not Found</h1>
<p>The page you are looking for could not be found.</p>
<p><a href="/">Go back to home</a></p>
